# ESP32-Voice

./: .gitignore  00-cursor-readme.md  01-coding-style.md  02-project-layout.md  03-implementation-rules.md  04-documentation-index.md  05-platform-and-api.md  06-config-and-cli.md  07-display-ir-sensors.md  08-build-plan.md  README.md  cursor_rules.md  manual_smoke_checklist.md  pytest.ini  pytest_plan.md  requirements.txt  test_cases.md  test_matrix.md  test_scaffolding.md  test_strategy.md  test_todo_checklist.md  testing_readme.md
firmware/components/api/: CMakeLists.txt  api_context.hpp  error_response_factory.cpp  error_response_factory.hpp  http_response_helpers.cpp  http_response_helpers.hpp  http_server_service.cpp  http_server_service.hpp  json_response_builder.cpp  json_response_builder.hpp  route_registry.cpp  route_registry.hpp
firmware/components/api/routes/: battery_route.cpp  battery_route.hpp  config_route.cpp  config_route.hpp  display_route.cpp  display_route.hpp  environment_route.cpp  environment_route.hpp  health_route.cpp  health_route.hpp  ir_route.cpp  ir_route.hpp  ota_route.cpp  ota_route.hpp  (+6 more)
firmware/components/audio/: CMakeLists.txt  audio_activity.hpp  audio_capture_service.cpp  audio_capture_service.hpp  audio_playback_service.cpp  audio_playback_service.hpp  audio_protocol.cpp  audio_protocol.hpp  audio_types.hpp  audio_upload_service.cpp  audio_upload_service.hpp  box3_audio_board.cpp  box3_audio_board.hpp  utterance_state_machine.cpp  utterance_state_machine.hpp  vad_service.cpp  vad_service.hpp
firmware/main/: CMakeLists.txt  app_main.cpp  early_boot_log.c  fix_spi_flash_mmap.c  idf_component.yml
(+116 files in other folders)
